--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,42 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/edit/{{city.id}}" method="post">
+<form action="/edit/{{mlb.id}}" method="post">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName" value="{{city.fldName}}">
+            <label for="fldName">PLayer Names</label>
+            <input id="fldName" type="text" class="form-control" placeholder="Player Name" name="fldName" value="{{mlb.fldName}}">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" type="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation" value="{{city.fldAbbreviation}}">
+            <label for="fldTeam">Player Team</label>
+            <input id="fldTeam" type="text" class="form-control" placeholder="Team" name="fldTeam" value="{{mlb.fldTeam}}">
         </div>
         <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry" value="{{city.fldCountry}}">
+            <label for="fldPosition">Player Position</label>
+            <input id="fldPosition" type="text" class="form-control" placeholder="Position" name="fldPosition" value="{{mlb.fldPosition}}">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat" value="{{city.fldLat}}">
+            <label for="fldHeight_inches">Height(in)</label>
+            <input id="fldHeight_inches" type="text" class="form-control" placeholder="Height(in)" name="fldHeight_inches" value="{{mlb.fldHeight_inches}}">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong" value="{{city.fldLong}}">
+            <label for="fldWeight_lbs">Weight(lbs)</label>
+            <input id="fldWeight_lbs" type="text" class="form-control" placeholder="Weight(lbs)" name="fldWeight_lbs" value="{{mlb.fldWeight_lbs}}">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
+            <label for="fldAge">Player's Age</label>
 
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status"
-                   name="fldCapitalStatus" value="{{city.fldCapitalStatus}}">
-        </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation" value="{{city.fldPopulation}}">
+            <input id="fldAge" type="text" class="form-control" placeholder="Age"
+                   name="fldAge" value="{{mlb.fldAge}}">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Save</button>
