--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,45 +1,39 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/cities/new" method="POST">
+<form action="/mlb/new" method="POST">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName">
+            <label for="fldName">Player's Name</label>
+            <input id="fldName" type="text" class="form-control" placeholder="Players Name" name="fldName">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" t ype="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation">
+            <label for="fldTeam">Player Team</label>
+            <input id="fldTeam" t ype="text" class="form-control" placeholder="City Team" name="fldTeam">
         </div>
         <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry">
+            <label for="fldPosition">Player Position</label>
+            <input id="fldPosition" type="text" class="form-control" placeholder="Position" name="fldPosition">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat">
+            <label for="fldHeight_inches">Height (ins)</label>
+            <input id="fldHeight_inches" type="text" class="form-control" placeholder="Height_inches" name="fldHeight_inches">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong">
+            <label for="fldWeight_lbs">Weight (lbs)</label>
+            <input id="fldWeight_lbs" type="text" class="form-control" placeholder="Weight_lbs" name="fldWeight_lbs">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
+            <label for="fldAge">Age</label>
 
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status "
-                   name="fldCapitalStatus">
-        </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation">
+            <input id="fldAge" type="text" class="form-control" placeholder="Age" name="fldAge">
         </div>
     </div>
-    <button type="submit" class="btn btn-success">Success</button>
+    <button type="submit" class="btn btn-success">Create</button>
 
 </form>
 
